force-app/main/default/objects/Inventory__c/fields/Last_Reorder_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reorder_Date__c</fullName>
    <label>Last Reorder Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>