force-app/main/default/objects/Inventory__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Inventorys</relationshipLabel>
    <relationshipName>Inventorys</relationshipName>
    <type>Lookup</type>
</CustomField>