force-app/main/default/objects/Inventory__c/fields/Total_Value_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_of_Items__c</fullName>
    <label>Total Value of Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>