force-app/main/default/objects/Inventory__c/fields/WareHouse__c.field-meta.xml
<CustomField>
    <fullName>WareHouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WareHouse</label>
    <referenceTo>WareHouse__c</referenceTo>
    <relationshipLabel>Inventorys</relationshipLabel>
    <relationshipName>Inventorys</relationshipName>
    <type>Lookup</type>
</CustomField>