force-app/main/default/objects/Inventory__c/validationRules/Lead_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Time</fullName>
    <active>true</active>
    <errorConditionFormula>Lead_Time__c &lt; 0</errorConditionFormula>
    <errorMessage>Lead Time cannot be negative</errorMessage>
</ValidationRule>