force-app/main/default/objects/Inventory__c/validationRules/Minimum_Order_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Order_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Minimum_Order_Quantity__c &lt; 0</errorConditionFormula>
    <errorMessage>Minimum_Order_Quantity__c &lt;= 0</errorMessage>
</ValidationRule>