force-app/main/default/objects/Inventory__c/validationRules/Quantity_Validation_Rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Validation_Rules</fullName>
    <active>true</active>
    <description>Prevent negative values in quantity.</description>
    <errorConditionFormula>Quantity_Available__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Quantity_Available__c</errorDisplayField>
    <errorMessage>Quantity available cannot be a negative value</errorMessage>
</ValidationRule>