force-app/main/default/objects/Inventory__c/validationRules/Reorder_Level_must_be_less_than_current.validationRule-meta.xml
<ValidationRule>
    <fullName>Reorder_Level_must_be_less_than_current</fullName>
    <active>true</active>
    <errorConditionFormula>Reorder_Level__c  &lt;  Quantity_Available__c</errorConditionFormula>
    <errorMessage>Reorder level must be less than available quantity</errorMessage>
</ValidationRule>