force-app/main/default/objects/Inventory__c/validationRules/Supplier.validationRule-meta.xml
<ValidationRule>
    <fullName>Supplier</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Active__c = True, ISBLANK( Supplier__c ) )</errorConditionFormula>
    <errorMessage>Active items must have a linked Supplier.</errorMessage>
</ValidationRule>