force-app/main/default/objects/Inventory__c/validationRules/Unit_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_Price</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Active__c = True ,
   ISBLANK( Unit_Price__c ) )</errorConditionFormula>
    <errorMessage>Active items must have a Unit Price</errorMessage>
</ValidationRule>