force-app/main/default/objects/Inventory__c/validationRules/Warehouse.validationRule-meta.xml
<ValidationRule>
    <fullName>Warehouse</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Active__c = True, ISBLANK( WareHouse__c ) )</errorConditionFormula>
    <errorMessage>You must assign a warehouse before marking the inventory as Active.</errorMessage>
</ValidationRule>